Fix bug: misaligned intro divs and deformed BoxerCard styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,7 @@ h3, h4, h5 {
   align-items: center;
   /* background-color: rgb(0, 0, 0); */
   margin: 0 auto;
-  width: 75vw;
+  width: 86vw;
   border-radius: 10px;
   background-size: cover;
   background-repeat: no-repeat;
