--- a/client/src/Components/Boxer/BoxerCard/BoxerCard.css
+++ b/client/src/Components/Boxer/BoxerCard/BoxerCard.css
@@ -1,44 +1,31 @@
 .BoxerCard {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
+  background-color: rgb(27, 13, 13);
+  position: relative;
   place-items: center;
-  height: 70vh;
+  height: 60vh;
   width: 100%;
-  margin-top: -4%;
-  /* border-radius: 8px; */
+  /* margin-top: -50%; */
   box-shadow: 1px 1px 4px 1px rgba(73, 71, 71, 0.2);
   opacity: 97%;
   color: rgb(255, 255, 255);
 }
 
 /* PREFIGHT Boxer Card **/
-.intros-right {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: absolute;
-  margin: auto;
-  padding: 5%;
-  height: 56vh;
-  background-color: rgb(255, 255, 255);
-  color: black;
-  box-shadow: 1px 0px 4px 3px rgba(15, 11, 11, 0.4);
-  /* border-radius: 1px; */
-  text-align: left;
-}
 
-.intros-left {
+.intros {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 8vw;
   position: absolute;
   margin: auto;
   padding: 5%;
-  height: 56vh;
+  margin-top: 8%;
   background-color: rgb(255, 255, 255);
   color: black;
   box-shadow: 1px 0px 4px 3px rgba(15, 11, 11, 0.4);
-  /* border-radius: 1px; */
   text-align: left;
 }
 
@@ -47,6 +34,17 @@
 }
 
 .BoxerCard > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(27, 13, 13);
+  color: rgb(245, 235, 235);
+  font-weight: 600;
+  font-style: italic;
+  height: 32.5%;
+  width: 95%;
+  margin: 1%;
   border-radius: 5px;
   border: none;
   box-shadow: 1px 1px 3px 1px rgba(73, 71, 71, 0.1);
@@ -97,9 +95,6 @@
   flex-direction: column;
   align-items: center;
   background-color: rgb(27, 13, 13);
-  margin-top: 5%;
-  width: 100%;
-  height: 100%;
 }
 
 .boxer-info > * {
@@ -109,21 +104,20 @@
 
 /*boxer info and stats*/
 
-.boxer-info-profile, .fight-stats {
+.boxer-info-profile {
   background-color: rgb(27, 13, 13);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0;
-  width: 100%;
-  height: 100%;
+  margin: 0 auto;
 }
 
 .boxer-info-profile > h5 {
   display: flex;
   position: relative;
   align-items: left;
-  left: 12%;
+  width: 100%;
+  justify-content: center;
 }
 
 .boxer-pic {
@@ -136,7 +130,6 @@
 /*** Graphs and Charts  ***/
 
 .fight-stats {
-  /* padding: 2.5%; */
   margin: 0;
 }
 
@@ -150,10 +143,11 @@
   grid-template-columns: repeat(2 1fr);
   place-items: center;
 }
-
+/* 
 .fight-stats-punches-data div {
-  margin: 5% auto;
-}
+  margin: 2% auto;
+
+} */
 
 .fight-stats-punches-data h5 {
   margin: 0;
@@ -182,7 +176,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin: 0 auto; */
   height: 30%;
 }
 
